# examples-hubo-motion-rt

./: CMakeLists.txt
src/: trajectory-follow.cpp
